token assertion as a helper

--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         }
         , "files": [
             "mod/_ioc-facade.php"
-            ,"src/_functions.php"
+           ,"mod/_functions.php"
+           ,"src/_functions.php"
         ]
     }
 }
