not include module feature files

--- a/composer.json
+++ b/composer.json
@@ -16,9 +16,7 @@
             , "Module\\OAuth2Client\\": "mod/"
         }
         , "files": [
-            "mod/_ioc-facade.php"
-           ,"mod/_functions.php"
-           ,"src/_functions.php"
+           "src/_functions.php"
         ]
     }
 }
